--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer class="footer reveal">
   <p>
-    Chalk is a high quality, completely customizable, performant and 100% free
-    blog template for Jekyll built by
-    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" target="_blank" title="Download Chalk">here</a>.
+    test IO sideproject blog |
+    <a href="{{ 'about' | relative_url }}" title="About Us">About Us</a>
   </p>
 </footer>
